# agentic-rag

./: .env.example  .gitignore  AGENTS.md  DEV_SPEC.md  README.md  pyproject.toml  requirements.txt  test_agent.py
.claude/skills/interviewee/: SKILL.md
.claude/skills/project-review/: review_progress.md
config/: evaluation.yaml  memory_evaluation.json  settings.yaml
docs/: Agent_评估.md  RAG_评估.md  evaluation.md  graph.md  评测步骤.md
eval_data/annotated/: test_set.json
scripts/: batch_query.py  compare_agent_results.py  convert_docx_to_pdf.py  evaluate_completeness.py  evaluate_memory.py  evaluate_memory_v2.py  evaluate_memory_v3.py  evaluate_ragas.py  export_from_langfuse.py  export_from_langfuse_dataset.py  run_agent_ablation.py  start_agent.py  start_ui.py  visualize_graph.py
scripts/dataset/: build_memory_test_dataset.py  memory_loader.py  preset_memories.json  test_case_schema.py  test_memory_recall.py
src/: __init__.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  analyzer.py  decomposer.py  evaluator.py  generator.py  memory_recall.py  memory_router.py  memory_save.py  retriever.py  rewriter.py
src/agent/prompts/: __init__.py
src/core/: __init__.py  config.py  llm_client.py  types.py  utils.py
src/evaluation/: __init__.py  data_collector.py  langfuse_client.py  metrics.py  ragas_evaluator.py
src/mcp_client/: __init__.py  client.py  tools.py
src/ui/: __init__.py  app.py
src/ui/components/: __init__.py  (+3 more)
tests/: __init__.py
tests/integration/: test_agent.py  test_mcp_connection.py
tests/unit/: test_nodes.py
(+6 files in other folders)
